# SQLITE-MCP

./: .gitignore  API SUMMARY.md  Chart.mmd  INSTALL.md  LICENSE  README.md  _finalize-install.ps1  _finalize-install.sh  install.bat  install.ps1  install.sh  pyproject.toml  roadmap.md  temp_crud_test.py  tmp.db-shm  tmp.db-wal  tmp_check.py  tmp_roadmap.py  tmp_smoke_test.py  tmp_update.py  tmp_verify.py  uninstall.ps1  uninstall.sh
.github/: copilot-instructions.md
.github/agents/: project-memory.agent.md
assets/: copilot-instructions-snippet.md
assets/agents/: project-memory.agent.md
assets/skills/sqlite-project-memory/: SKILL.md
data/: project_memory.db-shm  project_memory.db-wal
exports/: architecture.md  decisions.md  notes.md  plan.md  roadmap.md  todo.md
src/: brainstorm.md
src/sqlite_mcp_server/: __main__.py  cli.py  db.py  server.py
src/sqlite_project_memory_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_db.py  test_mcp_integration.py  test_server.py
tmp_views/: todo.md
